k8s/on/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: on-virtual-service
  namespace: istio-ingress
spec:
  hosts:
    - "*.on.iidi.alpha.phac.gc.ca"
  gateways:
    - istio-ingress/mesh-gateway
  http:
    # Route for patient-browser
    - match:
        - headers:
            ":authority":
              exact: "patient-browser.on.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: patient-browser-svc.on.svc.cluster.local
            port:
              number: 8079

    # Route for fhir
    - match:
        - headers:
            ":authority":
              exact: "fhir.on.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: hapi-fhir-svc.on.svc.cluster.local
            port:
              number: 8080

    # Route for aggregator
    - match:
        - headers:
            ":authority":
              exact: "aggregator.on.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: aggregator-service.on.svc.cluster.local
            port:
              number: 80

    # Route for transfer-outbound
    - match:
        - headers:
            ":authority":
              exact: "transfer-outbound.on.iidi.alpha.phac.gc.ca"
      route:
        - destination:
            host: transfer-outbound.on.svc.cluster.local
            port:
              number: 3000
